<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/container">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            app:srcCompat="@drawable/onebarangay_word_logo"
            tools:layout_editor_absoluteX="26dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/announcementBtn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="@dimen/size_btn"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/announcement"
                android:textAllCaps="false"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/dataVizBtn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="@dimen/size_btn"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/dataViz"
                android:textAllCaps="false"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/servicesBtn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="@dimen/size_btn"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/services"
                android:textAllCaps="false"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/notificationBtn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="@dimen/size_btn"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/notifications"
                android:textAllCaps="false"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/profileBtn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="@dimen/size_btn"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/profile"
                android:textAllCaps="false"
                app:cornerRadius="8dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>