<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServicesActivity">

    <TextView
        android:id="@+id/servicesTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:text="@string/services"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/viewAppointmentBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="@dimen/box_size_btn"
                android:layout_height="@dimen/box_size_btn"
                android:layout_marginRight="5dp"
                android:drawableTop="@drawable/view_appointment"
                android:padding="15dp"
                android:text="@string/vAppointment"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/viewReportsBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="@dimen/box_size_btn"
                android:layout_height="@dimen/box_size_btn"
                android:layout_marginLeft="5dp"
                android:drawableTop="@drawable/view_reports"
                android:padding="15dp"
                android:text="@string/vComplaints"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:cornerRadius="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bulkSchedBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="@dimen/box_size_btn"
                android:layout_height="@dimen/box_size_btn"
                android:layout_marginRight="5dp"
                android:drawableTop="@drawable/bulk_schedule"
                android:padding="15dp"
                android:text="@string/bSched"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/scanDocuBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="@dimen/box_size_btn"
                android:layout_height="@dimen/box_size_btn"
                android:layout_marginLeft="5dp"
                android:drawableTop="@drawable/scan_document"
                android:padding="15dp"
                android:text="@string/sDocu"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:cornerRadius="8dp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>