<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResidentUploadComplaintProofActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/uploadProof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploadProofText"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="32dp" />

            <LinearLayout
                android:id="@+id/linearProof1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="360dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearProof2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/complaintTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/uploadImage"
                        android:layout_width="246dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/alphaBlue"
                        android:textAllCaps="false"
                        android:drawableLeft="@drawable/ic_outline_file_upload"
                        android:text="@string/imageUpload" />

                    <Button
                        android:id="@+id/takePic"
                        android:layout_width="246dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/alphaBlue"
                        android:textAllCaps="false"
                        android:drawableLeft="@drawable/ic_outline_camera_alt"
                        android:text="@string/takePic" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cancelBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:backgroundTint="@color/alphaGray"
                        android:drawableLeft="@drawable/cancel_icon_white"
                        android:text="@string/cancel" />

                    <Button
                        android:id="@+id/submitBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:backgroundTint="@color/alphaBlue"
                        android:drawableLeft="@drawable/check_icon"
                        android:text="@string/submit" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>